[package]
name = "mymqtt"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = "0.11"
clap = { version = "3.2.2", features = ["derive", "env", "wrap_help", "unstable-v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
tracing = "0.1.29"
tracing-subscriber = { version="0.3.3", features = ["env-filter"] }
run_script = "^0.10.0"
openssl = { version = "0.10", features = ["vendored"] }


[[bin]]
name = "sub"
path = "src/sub/main.rs"

[[bin]]
name = "pub"
path = "src/pub/main.rs"



[profile.release]
lto = true
opt-level = "z"  # Optimize for size
codegen-units = 1
